--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
         <a href="https://instagram.com/calvink_360/" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
           ><span>Join the TinyEarth360 community</span>
         </a>
+
+        <p></p>
+        <p>Roadmap:</p>
+        <p>February 2022 - first collection drop (100 planets)
+        <p>March / April 2022 - next collection drops
+        <p>more details soon...
+        </p>
+
       </div>
     </section>
 
