--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               target="_blank"
               rel="noopener noreferrer"
           >
-            <img src="images/header/instag.webp" alt="Instagram" />>
+            <img src="images/header/instag.webp" alt="Instagram" />
           </a>
           <a
             href="https://opensea.io/collection/tinyearth360"
